@@ -17,6 +17,7 @@ OpenLDAP 2.4.20 Engineering
 	Fixed slapd invalid dn log message (ITS#6309)
 	Fixed slapd lockup on shutdown (ITS#6372)
 	Fixed slapd termination for one level DNs (ITS#6338)
+	Fixed slapd tls_accept to retry in certain cases (ITS#6304)
 	Fixed slapd unused parameter (ITS#6356)
 	Fixed slapd-bdb/hdb cache corruption (ITS#6341)
 	Fixed slapd-bdb/hdb entry cache (ITS#6360)
